components/nonmem/src/output_files/snapshots/nonmem__output_files__shk__tests__3068_importance_only@3068.shk.snap
---
source: components/nonmem/src/output_files/shk.rs
expression: "format!(\"{:#?}\", result)"
input_file: components/nonmem/test_data/shk/3068.shk
---
[]
