components/nonmem/src/output_files/snapshots/nonmem__output_files__shk__tests__bql_importance_only@bql.shk.snap
---
source: components/nonmem/src/output_files/shk.rs
expression: "format!(\"{:#?}\", result)"
input_file: components/nonmem/test_data/shk/bql.shk
---
[]
