components/nonmem/src/output_files/snapshots/nonmem__output_files__shk__tests__can_parse_shk_files@3068.shk.snap
---
source: components/nonmem/src/output_files/shk.rs
expression: snap
input_file: components/nonmem/test_data/shk/3068.shk
---
TYPE,SUBPOP,ETA(1),ETA(2),ETA(3),ETA(4)
1,1,0,0.023771,-0.0796227,0
2,1,0,0.0913935,0.0581043,0
3,1,-1,-1,-1,-1
4,1,0,4.3162,25.495,0
5,1,0.690562,100,0,0
6,1,0,0.0840177,0.503196,0
7,1,15,15,15,15
8,1,0,8.44611,44.4901,0
9,1,0,0.167965,1.00386,0
10,1,1.37636,100,0,0
11,1,0,99.832,98.9961,0

TYPE,SUBPOP,ETA(1),ETA(2),ETA(3),ETA(4)
1,2,0,0.0160635,0.0336938,0
2,2,0,0.0612727,0.0544894,0
3,2,-1,-1,-1,-1
4,2,0,2.01072,0.0000000001,0
5,2,2.18201,100,0,0
6,2,0,0.0703129,0.247163,0
7,2,35,35,35,35
8,2,0,3.98102,0.0000000001,0
9,2,0,0.140576,0.493716,0
10,2,4.31641,100,0,0
11,2,0,99.8591,99.506,0
