components/nonmem/src/output_files/snapshots/nonmem__output_files__shk__tests__can_parse_shk_files@itsimp.shk.snap
---
source: components/nonmem/src/output_files/shk.rs
expression: "result[0][0].to_csv()"
input_file: components/nonmem/test_data/shk/itsimp.shk
---
TYPE,SUBPOP,ETA(1),ETA(2),ETA(3),ETA(4)
1,1,-0.0000000425284,-0.0000000531037,-0.0000000987707,-0.0000000886959
2,1,0.00471323,0.00298829,0.00294211,0.00369138
3,1,0.999993,0.999986,0.999973,0.999981
4,1,6.91515,32.9114,41.052,25.0731
5,1,26.1873,0,0,0
6,1,6.91507,32.9112,41.0504,25.0724
7,1,400,400,400,400
8,1,13.3521,54.9912,65.2513,43.8596
9,1,13.352,54.991,65.2494,43.8586
10,1,45.5168,0,0,0
