components/nonmem/src/output_files/snapshots/nonmem__output_files__shk__tests__can_parse_shk_files_with_multi_methods@3068.shk.snap
---
source: components/nonmem/src/output_files/shk.rs
expression: "result[0][0].to_csv()"
input_file: components/nonmem/test_data/shk/3068.shk
---
TYPE,SUBPOP,ETA(1),ETA(2),ETA(3),ETA(4)
1,1,0,0.023771,-0.0796227,0
2,1,0,0.0913935,0.0581043,0
3,1,-1,-1,-1,-1
4,1,0,4.3162,25.495,0
5,1,0.690562,100,0,0
6,1,0,0.0840177,0.503196,0
7,1,15,15,15,15
8,1,0,8.44611,44.4901,0
9,1,0,0.167965,1.00386,0
10,1,1.37636,100,0,0
11,1,0,99.832,98.9961,0
