components/nonmem/src/output_files/snapshots/nonmem__output_files__shk__tests__can_parse_shk_files_with_multi_methods@bql.shk.snap
---
source: components/nonmem/src/output_files/shk.rs
expression: "result[0][0].to_csv()"
input_file: components/nonmem/test_data/shk/bql.shk
---
TYPE,SUBPOP,ETA(1),ETA(2),ETA(3)
1,1,0.000801602,-0.000218944,-0.000308648
2,1,0.0226802,0.0133413,0.00618609
3,1,0.971806,0.986906,0.960207
4,1,0.666197,2.31732,18.695
5,1,9.70268,0,0
6,1,0.492543,2.1486,18.7027
7,1,193,193,193
8,1,1.32796,4.58094,33.895
9,1,0.98266,4.25104,33.9075
10,1,18.4639,0,0
11,1,98.9891,94.3077,65.0838
